--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,10 +17,10 @@
                 <option value="TIME_SERIES_INTRADAY">TIME SERIES INTRADAY</option>
                 <option value="TIME_SERIES_DAILY">TIME SERIES DAILY</option>
                 <option value="TIME_SERIES_DAILY_ADJUSTED">TIME SERIES DAILY ADJUSTED</option>
-                <option value="TIME_SERIES_MONTHLY_ADJUSTED">TIME SERIES INTRADAY</option>
-                <option value="GLOBAL_QUOTE">TIME SERIES DAILY</option>
-                <option value="TIME_SERIES_WEEKLY_ADJUSTE">TIME SERIES DAILY ADJUSTED</option>
-                <option value="TIME_SERIES_WEEKLY">TIME SERIES INTRADAY</option>
+                <option value="TIME_SERIES_MONTHLY_ADJUSTED">TIME SERIES MONTHLY ADJUSTED</option>
+                <option value="GLOBAL_QUOTE">GLOBAL QUOTE</option>
+                <option value="TIME_SERIES_WEEKLY_ADJUSTED">TIME SERIES WEEKLY ADJUSTED</option>
+                <option value="TIME_SERIES_WEEKLY">TIME SERIES WEEKLY</option>
             </select>
         </div><br><br>
         <input type="button" value="Submit" onclick="loadGetMsg()">
